--- a/pages/Admins/Admins.module.css
+++ b/pages/Admins/Admins.module.css
@@ -16,6 +16,8 @@
   background-color: #FFFFFF;
   height: 90%;
   border: 2px solid #ebebeb;
+  position: relative;
+  overflow: hidden;
 }
 
 .button {
